# anomaly-detection-mlops

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yaml
data/raw/: processed.csv
docs/images/: EDA.ipynb
notebooks/: 01_eda.ipynb  02_baseline_model.ipynb
src/: data_processing.py  model_training.py
tests/: test_data_processing.py
